# 2.4-screen

./: CMakeLists.txt  esp_idf_project_configuration.json  idf_component.yml  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  lv_conf.h  lv_font_chinese.c  lv_font_chinese.h  lvgl_display.c  lvgl_display.h  main.c
